# Multicore-Clustering

./: CMakeLists.txt  FindCUDAThrust.cmake  INSTALL  benchmark.sh  dimacs.sh  graphs-for-clustering.txt  scaling.sh  stats.sh
results/: makegraphs.p  nrclusters.p  scaling.p  timings.p  tolatex.c
src/: CMakeLists.txt  biograph.cpp  biograph.h  clustercuda.cu  clustercuda.h  clustertbb.cpp  clustertbb.h  coarsentbb.cpp  graph.cpp  graph.h  matchtbb.cpp  vis.h
